--- a/code2022/code2022.cabal
+++ b/code2022/code2022.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.34.6.
 --
 -- see: https://github.com/sol/hpack
 
@@ -27,12 +27,14 @@ library
   exposed-modules:
       Examples
       Lib
+      V02
   other-modules:
       Paths_code2022
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      QuickCheck >2.14
+    , base >=4.7 && <5
     , svg-builder >=0.1.1
   default-language: Haskell2010
 
@@ -44,7 +46,8 @@ executable code2022-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck >2.14
+    , base >=4.7 && <5
     , code2022
     , svg-builder >=0.1.1
   default-language: Haskell2010
@@ -58,7 +61,8 @@ test-suite code2022-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck >2.14
+    , base >=4.7 && <5
     , code2022
     , svg-builder >=0.1.1
   default-language: Haskell2010
