--- a/code2022/package.yaml
+++ b/code2022/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/pete
 dependencies:
 - base >= 4.7 && < 5
 - svg-builder >= 0.1.1
+- QuickCheck > 2.14
 
 library:
   source-dirs: src
